--- a/index.html
+++ b/index.html
@@ -36,13 +36,20 @@
     <dialog id="loading">
         <span class="spinner-border" role="status"></span>
         <span class="sr-only"> Loading...</span>
-        
+
     </dialog>
-    <py-script src="./main.py" config="./pyscript.toml"></py-script>
+    <py-script src="./dataviz.py" config="./pyscript.toml"></py-script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!-- Boostrap and Plotly JS libraries-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-3.0.1.min.js" charset="utf-8"></script>
+
 
 </body>
 
