--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span class="sr-only"> Loading...</span>
 
     </dialog>
-    <py-script src="./dataviz.py" config="./pyscript.toml"></py-script>
+    <py-script src="./main.py" config="./pyscript.toml"></py-script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
