--- a/index.html
+++ b/index.html
@@ -9,19 +9,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Pin to a specific, stable version of PyScript for production use -->
-    <link rel="stylesheet" href="https://pyscript.net/releases/2024.5.1/pyscript.css" />
-    <script defer src="https://pyscript.net/releases/2024.5.1/pyscript.js"></script>
-
-    <py-config>
-        packages = [
-            "matplotlib",
-            "markdown",
-            "plotly",
-            "pandas"
-        ]
-        [[fetch]]
-        files = ["./uilib.py"]
-    </py-config>
+        <link rel="stylesheet" href="https://pyscript.net/releases/2025.7.2/core.css" />
+        <script type="module" src="https://pyscript.net/releases/2025.7.2/core.js"></script>
 
     <!-- for splashscreen -->
     <style>
@@ -44,7 +33,7 @@
         <span class="sr-only"> Loading...</span>
 
     </dialog>
-    <py-script src="./main.py"></py-script>
+    <py-script src="./main.py" config="pyscript.toml"></py-script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
