--- a/demos/interactive_form.html
+++ b/demos/interactive_form.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Pin to a specific, stable version of PyScript for production use -->
-        <link rel="stylesheet" href="https://pyscript.net/releases/2025.7.2/core.css" />
-        <script type="module" src="https://pyscript.net/releases/2025.7.2/core.js"></script>
+
+    <link rel="stylesheet" href="https://pyscript.net/releases/2025.5.1/core.css">
+    <script type="module" src="https://pyscript.net/releases/2025.5.1/core.js"></script>
 
     <!-- for splashscreen -->
     <style>
@@ -28,22 +28,28 @@
 </head>
 
 <body>
+    <py-script>
+        import warnings
+        warnings.filterwarnings("ignore")
+    </py-script>
+
     <dialog id="loading">
         <span class="spinner-border" role="status"></span>
         <span class="sr-only"> Loading...</span>
 
     </dialog>
-    <script>
-        
-    </script>
-    <py-script src="./main.py" config="pyscript.toml"></py-script>
+    <py-script src="./interactive_form.py" config="./pyscript.toml"></py-script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <!-- Plotly JS library -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- Boostrap and Plotly JS libraries-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-3.0.1.min.js" charset="utf-8"></script>
+
 
 </body>
 
